--- a/index.html
+++ b/index.html
@@ -1,10 +1,178 @@
-<<!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<title></title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+    <!-- meta tags -->
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- important for responiveness -->
+    <title>Drupal Camp 2016 - Athens - Greece</title>
+    <meta name="description" content="Drupal Camp 2016 Athens. The biggest Drupal Camp yet! Stay tuned for more. We are building the main site as we speak.">
+    <!-- stylesheets -->
+    <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
+    <!-- scripts -->
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script type="text/javascript" src="assets/libs-js/particles.js"></script>
+    <script src="assets/js/custom.js"></script>
+    <!-- end head -->
 </head>
 <body>
+    <div class="particles-container">
+        <div id="particles-js"></div>
+        <div class="logo">
+            <img src="assets/images/drupalcamp-athens-2016-logo.png">
+        </div>
+    </div>
+    <div class="container">
+        <div class="content">
+            <h1>The 4th DrupalCamp in Greece is a done deal!</h1>
+            <p class="hero-text">Many interesting speakers and piles of code are upon us... It's going to be big... probably bigger than ever before! So don't forget to register and we'll keep you up to date with news, speakers and event updates</p>
+            <div class="subscription">
+                <!-- Begin MailChimp Signup Form -->
+                <div id="mc_embed_signup">
+                    <form action="//mydrupal.us12.list-manage.com/subscribe/post?u=5fe1061732c70e7bfbb9f1c51&amp;id=4c125a12a0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                        <div id="mc_embed_signup_scroll">
+                            <div class="mc-field-group">
+                                <!-- <label for="mce-EMAIL">Your Email </label> -->
+                                <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Your Email">
+                            </div>
+                            <div id="mce-responses" class="clear">
+                                <div class="response" id="mce-error-response" style="display:none"></div>
+                                <div class="response" id="mce-success-response" style="display:none"></div>
+                            </div>
+                            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_5fe1061732c70e7bfbb9f1c51_4c125a12a0" tabindex="-1" value=""></div>
+                            <div class="clear"><input type="submit" value="Keep Me Up To Date!" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer-message">
+        <h2>Of course, thats not all... a small team of Drupalheads are building a full featured site that is coming soon with everything you need to know about the event... stay tuned!</h2>
+    </div>
+    <div class="footer">
+      <ul class="social">
+        <li><a href="https://www.facebook.com/drupalgr" target="_blank">Facebook</a></li>
+        <li><a href="https://twitter.com/drupalGr" target="_blank">Twitter</a></li>
+        <li><a href="#">Info</a></li>
+      </ul>
+    </div>
 
+
+    <script type="text/javascript">
+            particlesJS("particles-js", {
+              "particles": {
+                "number": {
+                  "value": 60,
+                  "density": {
+                    "enable": true,
+                    "value_area": 800
+                  }
+                },
+                "color": {
+                  "value": "#ffffff"
+                },
+                "shape": {
+                  "type": "circle",
+                  "stroke": {
+                    "width": 0,
+                    "color": "#000000"
+                  },
+                  "polygon": {
+                    "nb_sides": 5
+                  },
+                  "image": {
+                    "src": "img/github.svg",
+                    "width": 100,
+                    "height": 100
+                  }
+                },
+                "opacity": {
+                  "value": 0.2,
+                  "random": false,
+                  "anim": {
+                    "enable": false,
+                    "speed": 1,
+                    "opacity_min": 0.1,
+                    "sync": false
+                  }
+                },
+                "size": {
+                  "value": 3,
+                  "random": true,
+                  "anim": {
+                    "enable": false,
+                    "speed": 40,
+                    "size_min": 0.1,
+                    "sync": false
+                  }
+                },
+                "line_linked": {
+                  "enable": true,
+                  "distance": 150,
+                  "color": "#ffffff",
+                  "opacity": 0.4,
+                  "width": 1
+                },
+                "move": {
+                  "enable": true,
+                  "speed": 1,
+                  "direction": "none",
+                  "random": false,
+                  "straight": false,
+                  "out_mode": "out",
+                  "bounce": false,
+                  "attract": {
+                    "enable": false,
+                    "rotateX": 600,
+                    "rotateY": 1200
+                  }
+                }
+              },
+              "interactivity": {
+                "detect_on": "canvas",
+                "events": {
+                  "onhover": {
+                    "enable": true,
+                    "mode": "grab"
+                  },
+                  "onclick": {
+                    "enable": true,
+                    "mode": "push"
+                  },
+                  "resize": true
+                },
+                "modes": {
+                  "grab": {
+                    "distance": 140,
+                    "line_linked": {
+                      "opacity": 1
+                    }
+                  },
+                  "bubble": {
+                    "distance": 400,
+                    "size": 40,
+                    "duration": 2,
+                    "opacity": 8,
+                    "speed": 3
+                  },
+                  "repulse": {
+                    "distance": 200,
+                    "duration": 0.4
+                  },
+                  "push": {
+                    "particles_nb": 4
+                  },
+                  "remove": {
+                    "particles_nb": 2
+                  }
+                }
+              },
+              "retina_detect": true
+            });
+    </script>
+    <!-- Mailchimp Script -->
+    <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+    <!--End mc_embed_signup-->
 </body>
 </html>
