Add images to the newsletter & footer component.

--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
           If you like it, follows me to social media and stay tuned about the event!
         </div>
         <div class="social__links">
-          <a class="social__link social__link--facebook" href="https://www.facebook.com/drupalgr" target="_blank">Facebook</a>
-          <a class="social__link social__link--twitter" href="https://twitter.com/drupalGr" target="_blank">Twitter</a>
+          <a class="social__link social__link--facebook" href="https://www.facebook.com/drupalgr" target="_blank"><img src="assets/images/footer-facebook.png" alt="Facebook" /></a>
+          <a class="social__link social__link--twitter" href="https://twitter.com/drupalGr" target="_blank"><img src="assets/images/footer-twitter.png" alt="Twitter" /></a>
         </div>
         <div class="social__text social__text--small">
           Or contact at <a mailto:"info@drupal-camp.gr">info@drupal-camp.gr</a>
