--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           <a class="social__link social__link--twitter" href="https://twitter.com/drupalGr" target="_blank"><img src="assets/images/footer-twitter.png" alt="Twitter" /></a>
         </div>
         <div class="social__text social__text--small">
-          Or contact at <a mailto:"info@drupal-camp.gr">info@drupal-camp.gr</a>
+          Or contact at <a href="mailto:info@drupal-camp.gr">info@drupal-camp.gr</a>
         </div>
         <div class="social__copy layout-2column">
           <div class="social__copyright layout-2column__col-x plain">
