--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- scripts -->
 
   <!-- end head -->
-  </head>
+</head>
 <body>
 
   <!-- FB like start-->
@@ -60,7 +60,6 @@
           <div class="layout-2column__col-x">
             Drupal is strong because its community is stronger. With the release of Drupal 8 there is so much to hear and talk about that you’ll need lots of notes… Come for the code, stay for the community!
           </div>
-        </div>
         </div>
 
         <div class="content__countdown">
@@ -137,9 +136,9 @@
       </div>
     </div>
   </footer>
-
   <!-- Mailchimp Script -->
   <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
   <!--End mc_embed_signup-->
+  <script src="scripts.js"></script>
 </body>
 </html>
