Plain Js Counter added.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           </div>
         </div>
 
-        <div class="content__countdown">
+        <div class="content__countdown" id="countdown">
           101 Days, 8 hours, 7 minutes & 24 seconds until the event
         </div>
 
