--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       <article class="save-the-date">
         <img class="save-the-date__date" src="assets/images/1-3-july.png" alt="1-3 July" />
-        <h1 class="save-the-date__title">Save the date</h1>
+        <h1 class="save-the-date__title">Save the Date</h1>
         <div class="save-the-date__location">Athens, Greece</div>
         <div class="save-the-date__social">
 
@@ -47,9 +47,7 @@
             <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
           </div>
         </div>
-
       </article>
-
 
       <article class="content__page">
         <h1 class="title title--medium">DrupalCamp Greece is back! Bigger! Better!</h1>
@@ -69,12 +67,14 @@
         <div class="content__drupal">
           <img src="assets/images/content-drupal-logo.png" align="drupal logo" />
         </div>
-
-
       </article>
 
+      <div class="content__flying">
+        <div class="content__airplane"></div>
+        <div class="content__mas-psekazoune"></div>
+      </div>
 
-    </div>
+    </div><!-- .content__inner -->
   </main>
   <footer>
     <div class="newsletter">
