--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           Stay Tuned!
         </h1>
         <div class="social__text">
-          If you like it, follows me to social media and stay tuned about the event!
+          If you 're interested, follow us on social media and stay tuned about the event!
         </div>
         <div class="social__links">
           <a class="social__link social__link--facebook" href="https://www.facebook.com/drupalgr" target="_blank"><img src="assets/images/footer-facebook.png" alt="Facebook" /></a>
