Header blue lines added

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <!-- FB like end-->
 
   <header class="header">
+    <div class="header__bg-lines">&nbsp;</div>
     <div class="header__inner layout-center">
       <!-- Responsive Image -->
       <picture>
