--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
       </div>
     </div>
     <div class="social">
+      <div class="social__bg-top-lines">&nbsp;</div>
       <div class="social__inner layout-center">
         <h1 class="title title--highlighted social__title">
           Stay Tuned!
@@ -141,6 +142,7 @@
 
 
       </div>
+      <div class="social__bg-bottom-lines">&nbsp;</div>
     </div>
   </footer>
   <!-- Mailchimp Script -->
