--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- important for responiveness -->
   <title>Drupal Camp 2016 - Athens - Greece</title>
-  <meta name="description" content="Drupal Camp 2016 Athens. The biggest Drupal Camp yet! Stay tuned for more. We are building the main site as we speak.">
+  <meta name="description" content="Drupal Camp 2016 Athens. 1-3 July in Athens. The biggest Drupal Camp yet! Subscribe for all event updates. We are building the main site as we speak.">
   <!-- stylesheets -->
   <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
   <!-- scripts -->
@@ -25,10 +25,10 @@
   <link rel="icon" type="image/png" href="assets/favicons/android-chrome-192x192.png" sizes="192x192">
   <link rel="icon" type="image/png" href="assets/favicons/favicon-16x16.png" sizes="16x16">
   <link rel="manifest" href="assets/favicons/manifest.json">
-  <link rel="mask-icon" href="assets/favicons/safari-pinned-tab.svg" color="#da532c">
-  <meta name="msapplication-TileColor" content="#da532c">
+  <link rel="mask-icon" href="assets/favicons/safari-pinned-tab.svg" color="#0073B7">
+  <meta name="msapplication-TileColor" content="#0073B7">
   <meta name="msapplication-TileImage" content="/mstile-144x144.png">
-  <meta name="theme-color" content="#da532c">
+  <meta name="theme-color" content="#0073B7">
   <!-- end head -->
 </head>
 <body>
